tests/compile_fail/enum.rs
use validated_fields::ValidatedFields;

#[derive(ValidatedFields)]
enum Enum {
    X,
    Y,
}
